@@ -3,7 +3,8 @@
 	* libfreeipmi/api/ipmi-api.c: End bridging when closing ipmi
 	session.  Do not support setting bridging targets when session not
 	open.  Do not require setting both channel and rs_addr, pick
-	appropriate default when only one is set.
+	appropriate default when only one is set.  Do not turn on bridging
+	if user configures defaults.
 
 	* libfreeipmi/include/freeipmi/api/ipmi-api.h: Update comments.
 	
